Fixed phone screen size shifting issue

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,8 +1,1 @@
-.body-about {
-
-}
-
-hr {
-    height: 0.5px;
-}
 
