--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -49,3 +49,14 @@
     gap: 2.4rem;
   }
 }
+
+@media (max-width: 548px) {
+  .title {
+    text-align: center;
+    margin-left: 0px;
+    
+    &::after {
+      display: none;
+    }
+  }
+}
