--- a/src/app/desc/desc.component.scss
+++ b/src/app/desc/desc.component.scss
@@ -36,3 +36,14 @@
         margin-right: 50px;
     }
 }
+
+@media (max-width: 548px) {
+  .title {
+    text-align: center;
+    margin-left: 0px;
+    
+    &::after {
+        display: none;
+    }
+  }
+}
